Bug 448625 - Color only Wallpaper mising in 5.23.90
Summary: Color only Wallpaper mising in 5.23.90
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Image & Slideshow wallpaper plugins (other bugs)
Version First Reported In: 5.23.90
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Marco Martin
URL:
Keywords: regression
: 449155 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-01-16 22:03 UTC by Claudio
Modified: 2022-01-25 21:01 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Claudio 2022-01-16 22:03:54 UTC
STEPS TO REPRODUCE
1. Open the Desktop Wallpaper settings (or Lock screen appearance settings)

OBSERVED RESULT
The color only wallpaper plugin is missing (only picture or slideshow available)

EXPECTED RESULT
Color only plugin still accessible

SOFTWARE/OS VERSIONS
Operating System: EndeavourOS
KDE Plasma Version: 5.23.90
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2
Kernel Version: 5.16.0-zen1-1-zen (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-4790K CPU @ 4.00GHz
Memory: 31.3 GiB of RAM
Graphics Processor: AMD Radeon RX 580 Series

ADDITIONAL INFORMATION

Functionality was removed by commit ff19a1c343b2f4eb38a91fa06db27a2404578cfe in plasma-workspace.
Re-adding
        "ServiceTypes": [
            "Plasma/Wallpaper"
        ],
to /usr/share/plasma/wallpapers/org.kde.color/metadata.json brings the plugin back.
Comment 1 Bug Janitor Service 2022-01-20 11:54:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1383
Comment 2 Fushan Wen 2022-01-20 13:03:43 UTC
Git commit 5c8816ddc7807693abce45512ca583621266cff4 by Fushan Wen.
Committed on 20/01/2022 at 13:03.
Pushed by fusionfuture into branch 'master'.

wallpapers/color: Add back "ServiceTypes" property in metadata.json

In containmentconfigview.cpp, "Plasma/Wallpaper" is checked if a plugin
is of ServiceType Plasma/Wallpaper.
FIXED-IN: 5.24

M  +3    -0    wallpapers/color/metadata.json

https://invent.kde.org/plasma/plasma-workspace/commit/5c8816ddc7807693abce45512ca583621266cff4
Comment 3 Fushan Wen 2022-01-20 13:04:39 UTC
Git commit 3ea3e6c99719b5aeec5d549001c3e4272e2ef2ea by Fushan Wen.
Committed on 20/01/2022 at 13:04.
Pushed by fusionfuture into branch 'Plasma/5.24'.

wallpapers/color: Add back "ServiceTypes" property in metadata.json

In containmentconfigview.cpp, "Plasma/Wallpaper" is checked if a plugin
is of ServiceType Plasma/Wallpaper.
FIXED-IN: 5.24


(cherry picked from commit 5c8816ddc7807693abce45512ca583621266cff4)

M  +3    -0    wallpapers/color/metadata.json

https://invent.kde.org/plasma/plasma-workspace/commit/3ea3e6c99719b5aeec5d549001c3e4272e2ef2ea
Comment 4 Alexander Lohnau 2022-01-20 15:32:40 UTC
Git commit f40d7738cf9959cca8a841459c683066ab9e123a by Alexander Lohnau.
Committed on 20/01/2022 at 13:54.
Pushed by fusionfuture into branch 'master'.

Fix unintended result in readKPackageTypes

We later check if we have an empty list, which does not work if we unconditionally
add the plugin id. This way plugins can be queried correctly, without them having to
define the ServiceTypes or KPackageStructure keys.

M  +1    -1    src/kpackage/private/utils.h

https://invent.kde.org/frameworks/kpackage/commit/f40d7738cf9959cca8a841459c683066ab9e123a
Comment 5 Nate Graham 2022-01-25 21:01:40 UTC
*** Bug 449155 has been marked as a duplicate of this bug. ***