Fix unintended result in readKPackageTypes

We later check if we have an empty list, which does not work if we unconditionally
add the plugin id. This way plugins can be queried correctly, without them having to
define the ServiceTypes or KPackageStructure keys.

BUG: 448625